nginx入门学习收尾

--- a/conf/8002-ruoyi-tomcat.conf
+++ b/conf/8002-ruoyi-tomcat.conf
@@ -2,23 +2,30 @@ server {
     listen 8002;
     server_name localhost;
 
-    # 精确匹配，匹配优先级最高
-    location = /ie.html {
-        root /Users/Zhuanz/sync/code/nginx-learning/www;
+    rewrite ^/profile/upload http://127.0.0.1:8080$request_uri;
+
+    root /Users/Zhuanz/sync/code/nginx-learning/www;
+
+    location / {
+        try_files $uri $uri/ @proxy;
     }
 
-    # 前缀匹配，匹配优先级第二高
-    location ^~ /fonts/ {
-        root /Users/Zhuanz/sync/code/nginx-learning/www;
-    }
+    # # 精确匹配，匹配优先级最高
+    # location = /ie.html {
+    # }
 
-    # 正则匹配，匹配优先级第三高
-    location ~ \.(css|js|png|jpg|gif|ico) {
-        root /Users/Zhuanz/sync/code/nginx-learning/www;
-    }
+    # # 前缀匹配，匹配优先级第二高
+    # location ^~ /fonts/ {
+    #     root /Users/Zhuanz/sync/code/nginx-learning/www;
+    # }
+
+    # # 正则匹配，匹配优先级第三高
+    # location ~ \.(css|js|png|jpg|gif|ico) {
+    #     root /Users/Zhuanz/sync/code/nginx-learning/www;
+    # }
 
     # 无修饰符的前缀匹配，匹配优先级最低
-    location / {
-        proxy_pass http://localhost:8080/;
+    location @proxy {
+        proxy_pass http://localhost:8080;
     }
 }
