--- a/conf/8003-load-balance.conf
+++ b/conf/8003-load-balance.conf
@@ -10,6 +10,9 @@ server {
     listen 8003;
     server_name localhost;
 
+    # 放在server块里面，是全局重定向
+    return 301 https://127.0.0.1:8004;
+
     location / {
         proxy_pass http://ruoyi-apps;
     }
